--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-reveal": "^1.2.1",
+    "react-tagsinput": "^3.19.0",
     "react_ujs": "^2.4.4"
   },
   "devDependencies": {
