--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "babel-preset-react": "^6.24.1",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
+    "react-autosuggest": "^9.3.4",
     "react-dom": "^16.3.2",
     "react-reveal": "^1.2.1",
     "react-tagsinput": "^3.19.0",
