--- a/package.json
+++ b/package.json
@@ -2,10 +2,14 @@
   "dependencies": {
     "@rails/webpacker": "3.4",
     "babel-preset-react": "^6.24.1",
+    "draft-js": "^0.10.5",
+    "draftjs-to-html": "^0.8.3",
+    "html-to-draftjs": "^1.3.0",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-autosuggest": "^9.3.4",
     "react-dom": "^16.3.2",
+    "react-draft-wysiwyg": "^1.12.12",
     "react-reveal": "^1.2.1",
     "react-tagsinput": "^3.19.0",
     "react_ujs": "^2.4.4"
