--- a/config/database.yml
+++ b/config/database.yml
@@ -21,5 +21,10 @@ test:
   database: db/test.sqlite3
 
 production:
-  <<: *default
+  adapter: postgresql
+  encoding: unicode
+  database: hendrick_it
+  pool: 5
+  username: ''
+  password: ''
   database: db/production.sqlite3
