--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-autosuggest": "^9.3.4",
+    "react-date-picker": "^6.10.1",
     "react-dom": "^16.3.2",
     "react-draft-wysiwyg": "^1.12.12",
     "react-reveal": "^1.2.1",
