--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "draft-js": "^0.10.5",
     "draftjs-to-html": "^0.8.3",
     "html-to-draftjs": "^1.3.0",
+    "moment": "2.18.1",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-autosuggest": "^9.3.4",
