--- a/config/database.yml
+++ b/config/database.yml
@@ -1,30 +1,22 @@
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
-#
-default: &default
-  adapter: sqlite3
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+common: &common
+  adapter: postgresql
+  host: localhost
+  port: 5432
+  pool: 5
   timeout: 5000
 
 development:
-  <<: *default
-  database: db/development.sqlite3
+  <<: *common
+  database: hendrick_it
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
 test:
-  <<: *default
-  database: db/test.sqlite3
+  <<: *common
+  database: hendrick_it_test
+
+staging:
+  <<: *common
+  database: hendrick_it_staging
 
 production:
-  adapter: postgresql
-  encoding: unicode
-  database: hendrick_it
-  pool: 5
-  username: ''
-  password: ''
-  database: db/production.sqlite3
+  url: <%= ENV["DATABASE_URL"] %>
+  pool: <%= ENV["DB_POOL"] || ENV['MAX_THREADS'] || 5 %>
