--- a/config/sqlite.database.yml
+++ b/config/sqlite.database.yml
@@ -5,24 +5,26 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter: postgresql
-  encoding: unicode
-  database: hendrick_it
-  pool: 5
-  username: ''
-  password: ''
+  adapter: sqlite3
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  timeout: 5000
 
 development:
   <<: *default
-  database: hendrick_it_development
+  database: db/development.sqlite3
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: hendrick_it_test
+  database: db/test.sqlite3
 
 production:
-  <<: *default
-  database: hendrick_it_production
+  adapter: postgresql
+  encoding: unicode
+  database: hendrick_it
+  pool: 5
+  username: ''
+  password: ''
+  database: db/production.sqlite3
